--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8009,7 +8009,7 @@
       </notes>
       <segment>
         <source>Das kannst die &lt;strong&gt;Tarnkleidung&lt;/strong&gt; nicht verwenden, solange die Zombies diese Zone kontrollieren!</source>
-        <target><![CDATA[Das kannst die <strong>Tarnkleidung</strong> nicht verwenden, solange die Zombies diese Zone kontrollieren!]]></target>
+        <target><![CDATA[Impossible d'utiliser le <strong>Camouflage</strong> tant que la zone est sous contrôle des zombies !]]></target>
       </segment>
     </unit>
     <unit id="1j7AoDM" name="5784480">
