--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -8066,7 +8066,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Das kannst die &lt;strong&gt;Tarnkleidung&lt;/strong&gt; nicht verwenden, solange die Zombies diese Zone kontrollieren!</source>
-        <target><![CDATA[Das kannst die <strong>Tarnkleidung</strong> nicht verwenden, solange die Zombies diese Zone kontrollieren!]]></target>
+        <target><![CDATA[¡Es imposible utilizar el <strong>Camuflaje</strong> mientras la zona esté bajo control de los zombies!]]></target>
       </segment>
     </unit>
     <unit id="1j7AoDM" name="5784480">
