--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -18766,7 +18766,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Du hast die &lt;strong&gt;Kontrolle über diese Zone verloren&lt;/strong&gt; (dies kann passieren, wenn ein anderer Bürger ohne dich gegangen ist)! Wenn du nicht festsitzen möchtest, kannst du noch flüchten. Es bleiben dir :</source>
-        <target><![CDATA[Du hast die <strong>Kontrolle über diese Zone verloren</strong> (dies kann passieren, wenn ein anderer Bürger ohne dich gegangen ist)! Wenn du nicht festsitzen möchtest, kannst du noch flüchten. Es bleiben dir :]]></target>
+        <target><![CDATA[You have <strong>lost control</strong> of this zone (perhaps because another citizen left the zone without you)! To escape before you get trapped, you have to leave before the timer runs out:]]></target>
       </segment>
     </unit>
     <unit id="9r.yyfK" name="f193d19">
@@ -18775,7 +18775,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Glücklicherweise kannst du dich dank deines %img_scout% &lt;strong&gt;Tarnanzug&lt;/strong&gt; unerkannt weiterbewegen.</source>
-        <target><![CDATA[Glücklicherweise kannst du dich dank deines %img_scout% <strong>Tarnanzug</strong> unerkannt weiterbewegen.]]></target>
+        <target><![CDATA[Fortunately, your %img_scout% <strong>Camouflage Vest</strong> allows you to continue moving around unseen.]]></target>
       </segment>
     </unit>
     <unit id="vd3qaKS" name="c6b1411">
@@ -18784,7 +18784,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Achtung: Jede Aktion in der Zone sorgt dafür, dass deine &lt;strong&gt;Tarnung auffliegt&lt;/strong&gt;. (Es können nur Aktionen ausgeführt werden, die mit einem Icon %img_scout_ok% gekennzeichnet sind)!</source>
-        <target><![CDATA[Achtung: Jede Aktion in der Zone sorgt dafür, dass deine <strong>Tarnung auffliegt</strong>. (Es können nur Aktionen ausgeführt werden, die mit einem Icon %img_scout_ok% gekennzeichnet sind)!]]></target>
+        <target><![CDATA[Warning : many actions, if carried out in this zone will make you <strong>lose your camouflage</strong> (only actions marked with the icon %img_scout_ok% can be used)!]]></target>
       </segment>
     </unit>
     <unit id="xIw6O1B" name="d7dddf6">
@@ -18793,7 +18793,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>Mit deinem %img_scout% &lt;strong&gt;Tarnanzug&lt;/strong&gt; kannst du dich bewegen ohne dabei entdeckt zu werden.</source>
-        <target><![CDATA[Mit deinem %img_scout% <strong>Tarnanzug</strong> kannst du dich bewegen ohne dabei entdeckt zu werden.]]></target>
+        <target><![CDATA[Your %img_scout% <strong>Camouflage Vest</strong> allows you to move around undetected.]]></target>
       </segment>
     </unit>
     <unit id="CN1z1xe" name="58ec9c9">
