--- a/translations/help.fr.xlf
+++ b/translations/help.fr.xlf
@@ -4874,7 +4874,7 @@ müssen durchdacht geplant werden.</source>
     </unit>
     <unit id="jdns.Il" name="dae39d1">
       <notes>
-        <note category="german">Jede Nacht um Mitternacht greifen die Untoten die Stadt an. Die Anzahl der Zombies variiert dabei von Tag zu Tag.</note>
+        <note category="german">Jede Nacht um Mitternacht (UTC+1) greifen die Untoten die Stadt an. Die Anzahl der Zombies variiert dabei von Tag zu Tag.</note>
       </notes>
       <segment>
         <source>Jede Nacht um Mitternacht greifen die Untoten die Stadt an. Die Anzahl der Zombies variiert dabei von Tag zu Tag.</source>
