--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -115,7 +115,7 @@
       </notes>
       <segment>
         <source>Das Stadttor wurde automatisch %action%.</source>
-        <target>La porte a été fermée automatiquement.</target>
+        <target>The gates have been %action% automatically.</target>
       </segment>
     </unit>
     <unit id="lnVaJJH" name="%citizen% hat die Stadt %action%.">
