ES Translation for putting back the camouflage

--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -8057,7 +8057,7 @@ Preparas algo con mucho esmero. Después de unos minutos de cocción, sacas del 
       </notes>
       <segment>
         <source>Du bist ab sofort getarnt.</source>
-        <target>Du bist ab sofort getarnt.</target>
+        <target>Ahora estás camuflado.</target>
       </segment>
     </unit>
     <unit id="x.8gDqz" name="17bda63">
