FR Translation for putting back the camouflage

--- a/translations/items.fr.xlf
+++ b/translations/items.fr.xlf
@@ -8000,7 +8000,7 @@
       </notes>
       <segment>
         <source>Du bist ab sofort getarnt.</source>
-        <target>Du bist ab sofort getarnt.</target>
+        <target>Vous êtes maintenant camouflé(e).</target>
       </segment>
     </unit>
     <unit id="x.8gDqz" name="17bda63">
