EN Translation correction for Kwik-fix name

--- a/translations/items.en.xlf
+++ b/translations/items.en.xlf
@@ -1537,7 +1537,7 @@
       </notes>
       <segment>
         <source>Reparatur Fix</source>
-        <target>Repair Kit</target>
+        <target>Kwik-fix</target>
       </segment>
     </unit>
     <unit id="1homVRE" name="Unvollständiger Motor">
