EN Translation correction related to the expert interface (2)

--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -17878,7 +17878,7 @@ No idea! The body has disappeared without trace...They must be rotting somewhere
       </notes>
       <segment>
         <source>(Du bist gerade im &lt;strong&gt;Expertenmodus&lt;/strong&gt;)</source>
-        <target><![CDATA[(You are using the <strong>Expert</strong> interface)]]></target>
+        <target><![CDATA[(You are using the <strong>Expert</strong> Interface)]]></target>
       </segment>
     </unit>
     <unit id="_WQ7cjB" name="534d954">
