DE Translation correction for cleaning a zone chatlog

--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -3226,7 +3226,7 @@
       </notes>
       <segment>
         <source>%citizen% hat etwas Schutt entfernt.</source>
-        <target>%citizen% hat etwas Schutt entfernt.</target>
+        <target>%citizen% hat die Zone ein wenig gesäubert...</target>
       </segment>
     </unit>
     <unit id="WmDHw.1" name="%citizen% hat diese Ruine freigelegt. Es handelt sich um %type%. Hurra!">
